2008-01-25  Dale Mellor  <Dale Mellor <dale_mellor@users.sourceforge.net>>

	* makefile.am: Moved target-specific CFLAGS and LDFLAGS to global
	AM_* variables, to remove problem with automake requiring
	AM_PROGS_CC_C_O in configure.ac (!)

	* Version is currently at 1.0.3.
	

2005-09-02  hydro23  <Dale Mellor <dale_mellor@users.sourceforge.net>>

	* makefile.am, mcron.c.template (main): Modified install-exec-hook
	so that a proper installation of a Vixie-compatible cron only
	takes place if we are root - otherwise only mcron is installed as
	a user-owned program.  The guile modules are now installed under
	mcron's shared data directory, not guile's global directories.

	* mcron-core.scm: Removed job:advance-time, put the code inline
	where it was called, and changed the instance in the main loop to
	compute the new time based on the current-time, rather than the
	previous job time (this makes things behave more reasonably when a
	laptop awakes from suspend mode).

	* Bumped version to 1.0.2.
	

2004-05-15  Dale Mellor <dale_mellor@users.sourceforge.net>

	* Modified all auxiliary files to reflect that the package is now
	properly homed at www.gnu.org.

	* Bumped version to 1.0.1.
	

2003-12-11  Dale Mellor <dale_mellor@users.sourceforge.net>

	* Modified all auxiliary files to reflect that we are now a GNU
	package.

	* Bumped version to 1.0.0.

	
2003-12-07  Dale Mellor <dale_mellor@users.sourceforge.net>

	* configure.ac: Added switches for files and directories used by
	mcron: --spool-dir, --socket-file, --allow-file, --deny-file,
	--pid-file and --tmp-dir. All the code has been modified to use
	these configure options (including the source for the texinfo
	manual).

	
2003-12-05  Dale Mellor <dale_mellor@users.sourceforge.net>

	* configure.ac: Added test for guile version >= 1.6.4.

	* bumped version to 0.99.4.

	
2003-08-03  Dale Mellor <dale_mellor@users.sourceforge.net>

        * Third cut, fully functional, modular, production quality, still