@@ -1,5 +1,10 @@
 2008-01-25  Dale Mellor  <Dale Mellor <dale_mellor@users.sourceforge.net>>
 
+	* main.scm: Argument to --schedule is no longer optional (the
+	options system goes really screwy with optional values, usually
+	pulling the first non-option argument as a value if one was not
+	intended!)
+
 	* makefile.am: Moved target-specific CFLAGS and LDFLAGS to global
 	AM_* variables, to remove problem with automake requiring
 	AM_PROGS_CC_C_O in configure.ac (!)
